--- a/DrawingWithTutorial/Tutorial.xaml
+++ b/DrawingWithTutorial/Tutorial.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="DrawingWithTutorial.Tutorial"
+﻿<Window x:Class="DrawingWithTutorial.Tutorial" x:Name="tutorialWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,8 +6,74 @@
         xmlns:local="clr-namespace:DrawingWithTutorial"
         mc:Ignorable="d"
         Title="Tutorial" Height="600" Width="800"
-         MinHeight="600" MinWidth="800" SizeToContent="WidthAndHeight">
-    <Grid>
-        
+        MinHeight="600" MinWidth="800" SizeToContent="WidthAndHeight">
+    <Window.CommandBindings>
+        <CommandBinding Command="MediaCommands.Play" CanExecute="Play_CanExecute" Executed="Play_Executed" />
+        <CommandBinding Command="MediaCommands.Pause" CanExecute="Pause_CanExecute" Executed="Pause_Executed" />
+        <CommandBinding Command="MediaCommands.Stop" CanExecute="Stop_CanExecute" Executed="Stop_Executed" />
+    </Window.CommandBindings>
+    <Grid x:Name="MainGrid" MouseWheel="Grid_MouseWheel" SizeChanged="MainGrid_SizeChanged">
+        <Grid.LayoutTransform>
+            <ScaleTransform x:Name="ApplicationScaleTransform"
+                CenterX="0"
+                CenterY="0"
+                ScaleX="{Binding ElementName=tutorialWindow, Path=ScaleValue}"
+                ScaleY="{Binding ElementName=tutorialWindow, Path=ScaleValue}" />
+        </Grid.LayoutTransform>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Horizontal">
+            <Button x:Name="backTo" HorizontalAlignment="Right" Click="backTo_Click">
+                <Image Source="TutorImages/backTo.png" Height="30" Width="30"/>
+            </Button>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button Command="MediaCommands.Play" Content="TUTORIAL" HorizontalAlignment="Right" FontWeight="Bold" />
+        </StackPanel>
+        <MediaElement Name="mePlayer" Source="Media/test.mp4" Grid.Row="1" LoadedBehavior="Manual" Stretch="Uniform" StretchDirection="DownOnly" />
+
+        <StatusBar Grid.Row="2">
+            <StatusBar.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                    </Grid>
+                </ItemsPanelTemplate>
+            </StatusBar.ItemsPanel>
+
+            <StatusBarItem Grid.Column="2">
+                <ProgressBar Name="pbVolume" Width="50" Height="12" Maximum="1" Value="{Binding ElementName=mePlayer, Path=Volume}" />
+            </StatusBarItem>
+            <StatusBarItem Grid.Column="1"  HorizontalContentAlignment="Stretch">
+                <Slider Name="sliderProgress" Thumb.DragStarted="sliderProgress_DragStarted"  Thumb.DragCompleted="sliderProgress_DragCompleted" ValueChanged="sliderProgress_ValueChanged" IsMoveToPointEnabled="True"/>
+            </StatusBarItem>
+            <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+                <Button x:Name="fastBckwd" Click="fastBckwd_Click" >
+                    <Image Source="/TutorImages/back.png" Height="30" Width="30"/>
+                </Button>
+                <Button x:Name="start" HorizontalAlignment="Left" Click="play_Click">
+                    <Image Source="/TutorImages/Play.png" Height="30" Width="30" />
+                </Button>
+                <Button x:Name="fastFwd" Click="fastFwd_Click">
+                    <Image Source="/TutorImages/forward.png" Height="30" Width="30" />
+                </Button>
+                <Button Command="MediaCommands.Pause">
+                    <Image Source="/TutorImages/pause.png" Height="30" Width="30"/>
+                </Button>
+                <Button Command="MediaCommands.Stop">
+                    <Image Source="/TutorImages/stop.png" Height="30" Width="30"/>
+                </Button>
+                <StatusBarItem>
+                    <TextBlock Name="lblProgressStatus" MouseLeftButtonDown="lblProgressStatus_MouseLeftButtonDown" MouseLeave="lblProgressStatus_MouseLeave" >00:00:00</TextBlock>
+                </StatusBarItem>
+            </StackPanel>
+        </StatusBar>
     </Grid>
 </Window>
