add new 'clear' button

--- a/DrawingWithTutorial/MainWindow.xaml
+++ b/DrawingWithTutorial/MainWindow.xaml
@@ -3,27 +3,27 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DrawingWithTutorial"
         mc:Ignorable="d"
         Title="Drawing" Height="600" Width="800"
         MinHeight="600" MinWidth="800" SizeToContent="WidthAndHeight" KeyDown="Window_KeyDown">
     <DockPanel>
-        <Grid>
-</Grid>
         <Menu x:Name="Menu" DockPanel.Dock="Top">
             <MenuItem Header="File">
                 <MenuItem x:Name="menuNew" Header="New" Click="menuNew_Click"/>
                 <MenuItem x:Name="menuOpen" Header="Open" Click="menuOpen_Click"/>
                 <MenuItem x:Name="menuSave" Header="Save" Click="menuSave_Click"/>
             </MenuItem>
-
             <MenuItem Header="Help">
                 <MenuItem x:Name="menuTutorial" Header="Tutorial" Click="tutorial_Click"/>
             </MenuItem>
-
             <MenuItem x:Name="pencil" Width="26" Click="pencil_Click">
                 <MenuItem.Icon>
                     <Image Source="Images/pencil.png"/>
+                </MenuItem.Icon>
+            </MenuItem>
+            <MenuItem x:Name="erase" Header="Erase" Width="26" Click="erase_Click">
+                <MenuItem.Icon>
+                    <Image Source="Images/trash.png"/>
                 </MenuItem.Icon>
             </MenuItem>
             <MenuItem x:Name="brushSize" Width="26" Click="brushSize_Click">
