--- a/DrawingWithTutorial/MainWindow.xaml
+++ b/DrawingWithTutorial/MainWindow.xaml
@@ -1,4 +1,7 @@
-﻿<Window x:Class="DrawingWithTutorial.MainWindow" x:Name="myMainWindow"
+﻿<!-- Ilja Gusevs
+Kristina Yasenovich -->
+    
+<Window x:Class="DrawingWithTutorial.MainWindow" x:Name="myMainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
