--- a/DrawingWithTutorial/Tutorial.xaml
+++ b/DrawingWithTutorial/Tutorial.xaml
@@ -1,4 +1,7 @@
-﻿<Window x:Class="DrawingWithTutorial.Tutorial" x:Name="tutorialWindow"
+﻿<!-- Ilja Gusevs
+Kristina Yasenovich -->
+
+<Window x:Class="DrawingWithTutorial.Tutorial" x:Name="tutorialWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
